@@ -7,6 +7,7 @@ import java.lang.management.ManagementFactory
 import java.util.concurrent.{ConcurrentHashMap, Executors, ScheduledExecutorService, TimeUnit}
 import java.util.logging.{Level, Logger}
 import scala.collection.JavaConverters._
+import scala.util.control.NonFatal
 
 /**
  * Information about the Heap
